--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container" id="checkpoint">
+<div class="container mt-4" id="checkpoint">
   <div class="card mb-4">
     <div class="card-body">
       {{- include "fragments/artwork" .Illust }}
@@ -8,68 +8,75 @@
   </div>
 
   <div class="card mb-4">
-    <div class="card-header d-flex justify-content-between align-items-center">
-      <a class="text-decoration-none" href="/users/{{ .Illust.User.ID }}">
-        <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle me-2" style="width: 30px; height: 30px;">
-        Other works by {{ .Illust.User.Name }}
-      </a>
-      {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
-      <a href="{{combinedUrl}}" class="btn btn-sm btn-outline-primary">View all</a>
-    </div>
     <div class="card-body">
-      <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-2">
-        {{- range .Illust.RecentWorks }}
-        <div class="col">
-          <div class="artwork-small artwork">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <a class="text-decoration-none text-dark d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
+          <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle me-2" style="width: 40px; height: 40px;">
+          <span>Other works by {{ .Illust.User.Name }}</span>
+          <span class="ms-2">&raquo;</span>
+        </a>
+        {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
+        <a href="{{combinedUrl}}" class="btn btn-outline-primary btn-sm">View all</a>
+      </div>
+      <div class="overflow-auto">
+        <div class="d-flex">
+          {{- range .Illust.RecentWorks }}
+          <div class="me-3">
             {{- include "fragments/thumbnail-dt" . }}
           </div>
-        </div>
-        {{- end }}
-      </div>
-    </div>
-  </div>
-
-  <div class="accordion mb-4" id="commentsAccordion">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#commentsCollapse">
-          Comments
-        </button>
-      </h2>
-      <div id="commentsCollapse" class="accordion-collapse collapse" data-bs-parent="#commentsAccordion">
-        <div class="accordion-body">
-          {{- if .Illust.CommentDisabled == 1 }}
-          <p class="text-muted">The creator turned comments off</p>
-          {{- else if .Illust.Comments == 0 }}
-          <p class="text-muted">There are no comments yet</p>
-          {{- else }}
-            {{- range .Illust.CommentsList }}
-            <div class="d-flex mb-3">
-              <a href="/users/{{ .AuthorID }}" class="me-3">
-                <img class="rounded-circle" src="{{ .Avatar }}" alt="{{ .AuthorName }}" style="width: 40px; height: 40px;">
-              </a>
-              <div>
-                <a href="/users/{{ .AuthorID }}" class="text-decoration-none fw-bold">{{ .AuthorName }}</a>
-                <p class="mb-1">
-                  {{- if .Stamp }}
-                  <img class="img-fluid" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
-                    alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" style="max-width: 100px;">
-                  {{- else }}
-                    {{ raw: parseEmojis(.Context) }}
-                  {{- end }}
-                </p>
-                <small class="text-muted">{{ .Date }}</small>
-              </div>
-            </div>
-            {{- end }}
           {{- end }}
         </div>
       </div>
     </div>
   </div>
 
+  <div class="accordion mb-4" id="commentsAccordion">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingComments">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseComments" aria-expanded="false" aria-controls="collapseComments">
+          Comments
+        </button>
+      </h2>
+      <div id="collapseComments" class="accordion-collapse collapse" aria-labelledby="headingComments" data-bs-parent="#commentsAccordion">
+        <div class="accordion-body">
+          {{- if .Illust.CommentDisabled == 1 }}
+          <p>The creator turned comments off</p>
+          {{- else if .Illust.Comments == 0 }}
+          <p>There are no comments yet</p>
+          {{- else }}
+          <div class="list-group">
+            {{ range .Illust.CommentsList }}
+            <div class="list-group-item">
+              <div class="d-flex">
+                <a href="/users/{{ .AuthorID }}" class="me-3">
+                  <img class="rounded-circle" src="{{ .Avatar }}" alt="{{ .AuthorName }}" style="width: 40px; height: 40px;" />
+                </a>
+                <div>
+                  <a href="/users/{{ .AuthorID }}" class="text-decoration-none">
+                    <h6 class="mb-1">{{- .AuthorName }}</h6>
+                  </a>
+                  {{- if .Stamp }}
+                  <img class="img-fluid" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
+                    alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" style="max-width: 96px; max-height: 96px;" />
+                  {{- else }}
+                  <p>{{ raw: parseEmojis(.Context) }}</p>
+                  {{ end }}
+                  <small class="text-muted">{{ .Date }}</small>
+                </div>
+              </div>
+            </div>
+            {{- end }}
+          </div>
+          {{ end }}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container mb-4">
   <h2 class="mb-3">Related works</h2>
-  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-2">
+  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
     {{- include "fragments/small-tn" .Illust.RelatedWorks }}
   </div>
 </div>
