--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="row mt-4">
+  <div class="row row-cols-1 row-cols-md-4 g-4">
     {{- include "fragments/small-tn" .Artworks }}
   </div>
 
