--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container">
+<div class="container mb-5">
   <h1 class="display-4 mt-4">Discover artworks</h1>
 
   <div class="card mt-4">
@@ -24,8 +24,10 @@
     </div>
   </div>
 
-  <div class="row row-cols-1 row-cols-md-4 g-4">
-    {{- include "fragments/small-tn" .Artworks }}
+  <div class="container mt-4">
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
+      {{- include "fragments/small-tn" .Artworks }}
+    </div>
   </div>
 
   <div class="d-flex justify-content-center mt-4">
