--- a/assets/views/fragments/small-tn.jet.html
+++ b/assets/views/fragments/small-tn.jet.html
@@ -1,5 +1,6 @@
 {{- range . }}
   {{- if .ID == "#" }}
+  <div class="col">
     <div class="card h-100">
       <img src="/img/deleted.png" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
       <div class="card-body">
@@ -9,8 +10,10 @@
           <span class="text-muted">{{ .ArtistName }}</span>
         </div>
       </div>
+    </div>
   </div>
   {{- else if .ID }}
+  <div class="col">
     <div class="card h-100">
       {{ include "thumbnail-dt" . }}
       <div class="card-body">
@@ -18,5 +21,6 @@
         {{ include "thumbnail-at" . }}
       </div>
     </div>
+  </div>
   {{- end }}
 {{- end }}
