--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<!-- mb-3 for consistent spacing at the end of the card -->
+<div class="container-fluid mb-3">
   {{- if !.IsUgoira }}
   <!-- The actual work itself, if not a ugoira -->
     {{- range index := .Images }}
