--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -21,6 +21,7 @@
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script>
 
   <script src="/js/illust-preview.js" defer></script>
+  <script src="/js/horizontal-scroll.js" defer></script>
 
   <meta content="summary_large_image" name="twitter:card" />
 
@@ -46,7 +47,7 @@
 </head>
 
 <body data-hx-boost="true" data-hx-swap="outerHTML" data-hx-target="main" data-hx-select="main">
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="/img/favicon.png" alt="PixivFE icon" width="30" height="30" class="d-inline-block align-top">
