--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -2,7 +2,7 @@
 {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
 {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
 {{- hideAi := CookieList["pixivfe-HideArtAI"] }}
-<div class="position-relative">
+<div class="position-relative h-100">
   <div class="position-absolute top-0 start-0 p-2 d-flex justify-content-between w-100">
     {{- if isset(.Rank) }}
     <span class="badge bg-primary rounded-pill">{{ .Rank }}</span>
@@ -18,13 +18,13 @@
     {{- end }}
   </div>
   {{- AiType := isset(.AiType) ? .AiType : 0}}
-  <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint">
+  <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint" class="d-block h-100">
     {{- if (.XRestrict > 0 && hideR18 != "" && hideR18G != "") || (.XRestrict == 2 && hideR18G != "") }}
-    <img src="/img/nsfw.png" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
+    <img src="/img/nsfw.png" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
     {{- else if AiType == 2 && hideAi }}
-    <img src="/img/ai.png" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
+    <img src="/img/ai.png" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
     {{- else }}
-    <img src="{{ .Thumbnail }}" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
+    <img src="{{ .Thumbnail }}" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
     {{- end }}
   </a>
 </div>
