--- a/assets/views/fragments/thumbnail-tt.jet.html
+++ b/assets/views/fragments/thumbnail-tt.jet.html
@@ -1,4 +1,4 @@
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
-<h5 class="card-title">
+<p class="card-title text-truncate">
   <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint" class="text-decoration-none">{{ .Title }}</a>
-</h5>
+</p>
