--- a/assets/views/fragments/small-tn.jet.html
+++ b/assets/views/fragments/small-tn.jet.html
@@ -4,7 +4,7 @@
     <div class="card h-100 border-0">
       <img src="/img/deleted.png" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
       <div class="card-body py-2 px-0">
-        <p class="card-title text-truncate">{{ .Title }}</p>
+        <p class="card-title text-body text-truncate">{{ .Title }}</p>
         <div class="align-items-center mt-2">
           <img src="/img/deleted.png" alt="{{ .ArtistName }}" class="rounded-circle me-2" style="width: 24px; height: 24px;" loading="lazy" />
           <span class="text-muted">{{ .ArtistName }}</span>
