--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -1,28 +1,42 @@
-<!-- mb-3 for consistent spacing at the end of the card -->
-<div class="container-fluid mb-3">
+<!-- Container for the artworks -->
+<div class="container">
   {{- if !.IsUgoira }}
   <!-- The actual work itself, if not a ugoira -->
   <!-- Tried using a carousel, but doesn't really work that well -->
     {{- range index := .Images }}
-      <div class="mt-3 mb-4">
-        <a href="{{ .Original }}" target="_blank" id="{{ index + 1 }}" class="d-block text-center">
-          {{- if .Width != 0 && .Height != 0 }}
-            <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid" data-width="{{.Width}}" data-height="{{.Height}}" />
-          {{- else }}
-            <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid" />
-          {{- end }}
-        </a>
+      <div class="row justify-content-center mt-3 mb-4">
+        <div class="col-10">
+          <a href="{{ .Original }}" target="_blank" id="{{ index + 1 }}" class="d-block text-center">
+            {{- if .Width != 0 && .Height != 0 }}
+              {{- if .Width > .Height }}
+                <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
+              {{- else }}
+                <div class="row justify-content-center">
+                  <div class="col-8">
+                    <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
+                  </div>
+                </div>
+              {{- end }}
+            {{- else }}
+              <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" />
+            {{- end }}
+          </a>
+        </div>
       </div>
     {{- end }}
   {{- else }}
   <!-- The actual work itself, if a ugoira -->
-    <div class="mt-3">
-      <video class="w-100" autoplay loop muted disablepictureinpicture playsinline controls poster="{{ .Images[0].Large }}"
-        src="/proxy/ugoira.com/{{ .ID }}">
-        Unable to load ugoira.
-      </video>
+    <div class="row justify-content-center mt-3">
+      <div class="col-12 col-md-8 col-lg-6">
+        <video class="w-100 rounded" autoplay loop muted disablepictureinpicture playsinline controls poster="{{ .Images[0].Large }}"
+          src="/proxy/ugoira.com/{{ .ID }}">
+          Unable to load ugoira.
+        </video>
+      </div>
     </div>
   {{- end }}
+</div>
+
 
   <!-- Work title and user information -->
   <div class="card mt-4">
@@ -99,5 +113,3 @@
       </div>
     </div>
   </div>
-
-</div>
